# slack-agent

./: .dockerignore  .env.example  .gitignore  EINOPS_FIX_AND_FULL_REFRESH.md  FRESH_SYNC_COMPLETE.md  GITHUB_TOKEN_SETUP.md  LOCAL_SETUP.md  QUICKSTART.md  README.md  RESUMABLE_SYNC_SUMMARY.md  ROOT_CAUSE_EINOPS.md  STARTUP_GUIDE.md  docker-compose.build.yml  docker-compose.yml  github_repos.yaml  olake-team.json  pyproject.toml  remove_github_sync.sh  setup_github_sync.sh  setup_local.sh  start.sh  sync_config.yaml  sync_github_repos.py  terminal_allowed_commands.yaml  test_agent.py
.github/workflows/: claude.yml
agent/: cli_chat.py  cli_graph.py  codebase_search.py  config.py  dedup.py  github_repo_tracker.py  graph.py  llm.py  log_paths.py  logger.py  main.py  persistence.py  rag_client.py  repo_sync_log.py  slack_client.py  state.py  team.py  team_resolver.py  terminal_tool.py
agent/filesystem/: __init__.py  persistence.py  research_search_actions.py
agent/nodes/: __init__.py  clarification_asker.py  context_builder.py  deep_reasoner.py  deep_researcher.py  doc_retriever.py  escalation_handler.py  gate_filter.py  low_confidence_tagger.py  olake_context_summariser.py  solution_provider.py  summariser.py
agent/nodes/cli/: __init__.py  context_builder.py  low_confidence_tagger.py  relevance_filter.py  solution_provider.py
agent/utils/: cli_chat.py  cli_graph.py  llm.py  parser.py
config/: about.md  agent.yaml  repos.md  repos.yaml  terminal_allowed_commands.yaml
data/: slack_agent.db
docker/: Dockerfile.agent  Dockerfile.eval
docs/: QUICKSTART_CLI.md  TERMINAL_TOOL_GUIDE.md
eval_app/: __init__.py  config.py  db.py  main.py  run.py
eval_app/routers/: __init__.py  conversations.py  errors.py  stats.py
eval_app/templates/: base.html  errors.html  index.html
qdrant_data/: raft_state.json
qdrant_data/collections/olake_code/: config.json  payload_index.json
qdrant_data/collections/olake_code/0/: newest_clocks.json
qdrant_data/collections/olake_code/0/segments/618f6f48-4293-45a6-aecd-918982692073/: segment.json
qdrant_data/collections/olake_docs/0/: newest_clocks.json  replica_state.json
qdrant_data/collections/olake_docs/0/segments/46ca8bb9-4981-4bc8-9c30-aa2b3814ce1b/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_data/collections/olake_docs/0/segments/62efead0-eb10-4d34-99b3-c4b036472f63/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_data/collections/olake_docs/0/segments/7faefdf0-0a94-4fb7-aaf5-d5fa77d33e13/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_data/collections/olake_docs/0/segments/7faefdf0-0a94-4fb7-aaf5-d5fa77d33e13/payload_index/: config.json
qdrant_data/collections/olake_docs/0/segments/aa76492d-82aa-48ee-9194-6bd32e8de49f/: mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_db/: meta.json
scripts/: docker-build-push-agent.sh  remove_github_sync.sh  setup_github_sync.sh  start.sh  sync_repos.py
services/rag/: INGESTION.md  chunker.py  clear_qdrant.py  config.py  embedder.py  indexer.py  ingest_docs.py  ingest_docs_incremental.py  ingest_safe.py  ingest_utils.py  pyproject.toml  retriever.py  server.py
services/rag/docs/: olake_docs.md
services/rag/qdrant_db/: meta.json
tests/: README.md  run_all.py  test_agent.py  test_deep_researcher.py  test_ripgrep_astgrep_retrieval.py  test_terminal_tool.py
tests/unit/: test_chunker.py  test_config.py  test_embedder.py  test_indexer.py  test_retriever.py
