[project]
name = "olake-slack-agent"
version = "1.0.0"
description = "AI-powered Slack community agent for OLake support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "slack-sdk>=3.27.0",
    "flask>=3.0.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "google-genai>=1.0.0",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "fastembed>=0.7.4",
    "sentence-transformers>=2.2.0",
    # Codeparse dependencies
    "tree-sitter>=0.21.0",
    "tree-sitter-languages>=1.10.0",
    "gitpython>=3.1.40",
    "qdrant-client>=1.7.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "numpy>=1.24.0",
    "httpx>=0.24.0",
    "apscheduler>=3.10.0",
    "rich>=13.0.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "einops>=0.8.0",  # Required by nomic-ai embedding model
]

[project.scripts]
olake-agent = "agent.main:main"
codeparse = "services.codeparse.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "services"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
