[project]
name = "olake-slack-agent"
version = "1.0.0"
description = "AI-powered Slack community agent for OLake support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "slack-sdk>=3.27.0",
    "flask>=3.0.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "google-genai>=1.0.0",
    "openai>=1.10.0",
    "python-dotenv>=1.0.0",
    "psycopg[binary]>=3.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
slack-agent = "agent.main:main"
eval-dashboard = "eval_app.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "eval_app"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
